xserver-xorg-input-mouse (1:1.4.0-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Julien Cristau <jcristau@debian.org>  Wed, 21 Jan 2009 21:26:52 +0100

xserver-xorg-input-mouse (1:1.3.0-2) experimental; urgency=low

  * Build against xserver 1.5 rc5.

 -- Julien Cristau <jcristau@debian.org>  Mon, 14 Jul 2008 01:56:30 +0200

xserver-xorg-input-mouse (1:1.3.0-1) unstable; urgency=low

  * New upstream release.
  * Drop patch added in 1:1.2.3-2, it's applied in this release.
  * Drop the XS- prefix from Vcs-* control fields.
  * Run dpkg-shlibdeps with --warnings=6.  Drivers reference symbols from
    /usr/bin/Xorg and other modules, and that's not a bug, so we want
    dpkg-shlibdeps to shut up about symbols it can't find.  Build-depend on
    dpkg-dev >= 1.14.17.

 -- Julien Cristau <jcristau@debian.org>  Fri, 30 May 2008 13:55:10 +0200

xserver-xorg-input-mouse (1:1.2.3-2) unstable; urgency=low

  * New patch from Peter Hutterer (from upstream bug#13144): don't flush
    buttons, release events can cause paste events.
  * Bump Standards-Version to 3.7.3.

 -- Julien Cristau <jcristau@debian.org>  Thu, 06 Dec 2007 18:44:31 +0100

xserver-xorg-input-mouse (1:1.2.3-1) unstable; urgency=low

  * New upstream version.

 -- Drew Parsons <dparsons@debian.org>  Mon, 29 Oct 2007 01:05:21 +1100

xserver-xorg-input-mouse (1:1.2.2-6) unstable; urgency=low

  * Grab upstream commits up to f42ea3027c13046dfa7a603737b476fbf2833764
    so that the pointer is not confined in the right screen in zaphod mode,
    closes: #443552.
    + Update debian/copyright using the new upstream COPYING file.

 -- Brice Goglin <bgoglin@debian.org>  Sat, 22 Sep 2007 16:22:22 +0200

xserver-xorg-input-mouse (1:1.2.2-5) unstable; urgency=low

  * Upload to unstable

 -- David Nusinow <dnusinow@debian.org>  Sun, 16 Sep 2007 15:13:38 -0400

xserver-xorg-input-mouse (1:1.2.2-4) UNRELEASED; urgency=low

  * Add upstream URL to debian/copyright.
