@@ -1,6 +1,8 @@
 xserver-xorg-input-mouse (1:1.4.0-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Run autoreconf on build.
+  * Handle parallel builds.
 
  -- Julien Cristau <jcristau@debian.org>  Wed, 21 Jan 2009 21:26:52 +0100
 
